# vim: set noexpandtab:

2013-01-09 Steve
	* Commented out most of the event selection in SusyMetValidation
	* Updated SusyMetValidation branch usage to p1328 D3PDs
	* Changed debug level for some print statements

2012-12-15 Steve
	* Added support for JetTauEtmiss stream
	* Tagging SusyCommon-00-00-50

2012-12-14 Steve
	* Filling matched2TruthLepton for all leptons
	* Tagging SusyCommon-00-00-49

2012-12-13 Steve
	* Fixed tau trigger flag saving (thanks Matt Gignac)

2012-12-06 Steve
	* Updated to SUSYTools revision 528837
	* Updated tau usage with SUSYTools and MultiLep
	* Updated LeptonTruthTools tag and usage
	* Now saving tau truth match info from LeptonTruthTools
	* Now saving electron clusPhi, trackPt
	* Now saving muon idTrackPt, idTrackEta, idTrackPhi,
	* Code cleanup
	* Tagging SusyCommon-00-00-48

2012-11-27 Steve
	* Added tau triggers, event flags and object matching

2012-11-19 Steve
	* Now setting default GRL path in SusyD3PDAna.Begin
	* Changed default met in NtMaker.cxx to STVF
	* Added more options to SusySkim
	* Tagging SusyCommon-00-00-47

2012-11-14 Steve
	* Updated SusyD3PDSkimmer
		* Saving D3PD meta data cutflow tree
		* Filtering on 3 signal leptons
	* Added new grid submission script: submit.py
		* Very handy script with all the beloved features
		* Should work for all SusyNt submission jobs
		* Might replace the bash submission scripts
		* Run with '-h' to see the available options
	* Minor updates for SusyMetValidation
	* Changed HforToolD3PD removal mode to DEFAULT
		* Takashi says this is recommended over ALL, because
		  it will take into account the availability of samples.
		  He also says difference is small right now.  
		  It probably doesn't affect us with the samples we use.

2012-11-13 Matt
	* Photons now saved by default (only tight ones, so size should not increase by much).
	* Updated method in selectSignalPhotons(), but not uncommented. Need update to MultiLep package, 
	  wait for Steve

2012-11-12 Steve